# sigmatcher

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  definitions.schema.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  code-quality.yml  tests.yml
src/sigmatcher/: __init__.py  __main__.py  analysis.py  cache.py  cli.py  console_logging.py  definitions.py  errors.py  exceptions.py  formats.py  grep.py  input_paths.py  results.py  unpack.py
src/sigmatcher/.agents/skills/sigmatcher-signature/: SKILL.md
src/sigmatcher/.agents/skills/sigmatcher-signature/references/: CHECKLIST.md  COMMANDS.md  MACROS.md  SIGFILE_REFERENCE.md
tests/: conftest.py
tests/integration/: test_analyze_flow.py  test_cli_flow.py  test_external_tools.py
tests/unit/: test_analysis.py  test_cache.py  test_cli_helpers.py  test_definitions.py  test_formats.py  test_grep.py  test_results.py  test_unpack.py
